use birnet-zintern.
Fri Jul  7 02:17:02 2006  Tim Janik  <timj@gtk.org>

        * beast-gtk/dialogs/Makefile.am: use birnet-zintern.

        * tests/latency/bselatencytest.cc:
        * tools/bsewavetool.cc: use birnet_file_equals() and
        birnet_file_check().

svn path=/trunk/; revision=3811

--- a/beast-gtk/dialogs/Makefile.am
+++ b/beast-gtk/dialogs/Makefile.am
@@ -11,7 +11,7 @@ ZFILE_DEFS = $(strip \
 XML_FILES  = $(filter-out bst-%, $(ZFILE_DEFS))
 EXTRA_DIST += $(XML_FILES)
 
-ZINTERN=$(top_builddir)/bse/zintern/zintern
+ZINTERN=$(top_builddir)/birnet/birnet-zintern
 
 XMLLINTCALL=$(if $(XMLLINT),$(XMLLINT),true) # handle undefined XMLLINT
 
