fix birnet.o path
svn path=/trunk/; revision=3812

--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -120,8 +120,7 @@ birnetsignalvariants.hh: $(srcdir)/birnetsignalslot.hh $(srcdir)/birnetsignaltem
 CLEANFILES += xgen-sigs birnetsignalvariants.hh xgen-signals.sed
 
 noinst_PROGRAMS = birnet-zintern
-progs_ldadd     = $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) -lm
-progs_deps      = $(top_builddir)/birnet/libbirnet.o
+progs_ldadd     = libbirnet.o $(BIRNET_LIBS) -lm
 birnet_zintern_SOURCES = birnet-zintern.c dummy.cc
 birnet_zintern_LDADD   = $(progs_ldadd)
 birnet_zintern_DEPS    = $(progs_deps)
