--- a/configure.in
+++ b/configure.in
@@ -343,10 +343,10 @@ AC_DEFUN([AC_BSE_REQUIREMENTS],
     bseuserdatadir='~/beast'
     AC_SUBST(bseuserdatadir)
 ])
-AC_DEFUN([AC_BSE_SHELL_REQUIREMENTS],
+AC_DEFUN([AC_BSESCM_REQUIREMENTS],
 [
-    BSE_SHELL_CFLAGS="$BSE_CFLAGS"
-    BSE_SHELL_LIBS="$BSE_LIBS"
+    BSESCM_CFLAGS="$BSE_CFLAGS"
+    BSESCM_LIBS="$BSE_LIBS"
 
     dnl # --- libguile check ---
     guile_tests=0
@@ -364,8 +364,8 @@ AC_DEFUN([AC_BSE_SHELL_REQUIREMENTS],
 	AC_CHECK_HEADER(libguile/properties.h, guile_tests=`expr $guile_tests + 1`) dnl # guile-1.6 headerfile
     fi
     if test $guile_tests = 4 ; then
-	BSE_SHELL_CFLAGS="$GUILE_CFLAGS $BSE_SHELL_CFLAGS"
-	BSE_SHELL_LIBS="$GUILE_LDFLAGS $BSE_SHELL_LIBS" 
+	BSESCM_CFLAGS="$GUILE_CFLAGS $BSESCM_CFLAGS"
+	BSESCM_LIBS="$GUILE_LDFLAGS $BSESCM_LIBS" 
     else
 	EMSG="failed to detect guile headers and library v$REQUIRED_VERSION"
 	EMSG="$EMSG (available from http://www.gnu.org/software/guile/guile.html)"
@@ -373,8 +373,8 @@ AC_DEFUN([AC_BSE_SHELL_REQUIREMENTS],
 	AC_MSG_ERROR([$EMSG])
     fi
 
-    AC_SUBST(BSE_SHELL_CFLAGS)
-    AC_SUBST(BSE_SHELL_LIBS)
+    AC_SUBST(BSESCM_CFLAGS)
+    AC_SUBST(BSESCM_LIBS)
 ])
 AC_DEFUN([AC_GXK_REQUIREMENTS],
 [
@@ -565,7 +565,7 @@ AC_BIRNET_REQUIREMENTS
 AC_I18N_REQUIREMENTS
 AC_SFI_REQUIREMENTS
 AC_BSE_REQUIREMENTS
-AC_BSE_SHELL_REQUIREMENTS
+AC_BSESCM_REQUIREMENTS
 AC_BSE_SNDDEV_CHECK
 AC_GXK_REQUIREMENTS
 AC_BEAST_REQUIREMENTS
