--- a/data/bse.keys.in
+++ b/data/bse.keys.in
@@ -2,7 +2,7 @@ audio/x-bse
 	short_list_application_ids_for_novice_user_level=beast
 	short_list_application_ids_for_intermediate_user_level=beast
 	short_list_application_ids_for_advanced_user_level=beast
-	short_list_application_user_additions=beast,bsesh
+	short_list_application_user_additions=beast,bsescm
 	default_application_id=beast
 	default_component_id=beast
 	icon_filename=beast-audio-x-bse
