--- a/launchers/Makefile.am
+++ b/launchers/Makefile.am
@@ -13,16 +13,16 @@ DEFS += $(strip                         		\
 #
 # programs to build
 #
-bin_PROGRAMS = beast bsesh
-beast_SOURCES = suidmain.c beaststart.c
-bsesh_SOURCES = suidmain.c bseshstart.c
-EXTRA_DIST += suidmain.h
+bin_PROGRAMS   = beast bsescm
+beast_SOURCES  = suidmain.c beaststart.c
+bsescm_SOURCES = suidmain.c bseshstart.c
+EXTRA_DIST    += suidmain.h
 
 #
-# make bsesh wrapper suid to allow renicing
+# make bsescm wrapper suid to allow renicing
 #
 install-exec-hook:	# runs after install-binPROGRAMS
 	true \
-	&& ( chown root $(DESTDIR)$(bindir)/beast $(DESTDIR)$(bindir)/bsesh   \
-	&&   chmod 4755 $(DESTDIR)$(bindir)/beast $(DESTDIR)$(bindir)/bsesh ) \
-	|| ( echo "*** WARNING *** beast and bsesh need to be installed as root to allow renicing ***" && sleep 5 )
+	&& ( chown root $(DESTDIR)$(bindir)/beast $(DESTDIR)$(bindir)/bsescm   \
+	&&   chmod 4755 $(DESTDIR)$(bindir)/beast $(DESTDIR)$(bindir)/bsescm ) \
+	|| ( echo "*** WARNING *** beast and bsescm need to be installed as root to allow renicing ***" && sleep 5 )
