--- a/debian/rules
+++ b/debian/rules
@@ -62,7 +62,7 @@ install: build
 	# Install the package into debian/beast
 	$(MAKE) DESTDIR=$(CURDIR)/debian/beast install
 	ln -s beast.1.gz debian/beast/usr/share/man/man1/beast-0.6.6.1.gz
-	ln -s bsesh.1.gz debian/beast/usr/share/man/man1/bsesh-0.6.6.1.gz
+	ln -s bsescm.1.gz debian/beast/usr/share/man/man1/bsescm-0.6.6.1.gz
 	convert debian/beast/usr/share/pixmaps/beast.png -geometry 32x32 debian/beast/usr/share/pixmaps/beast.xpm
 
 # Build architecture-independent files here.
