Added a description of the beast coding style to the developer
Tue Aug 22 17:02:50 2006 Stefan Westerfeld <stefan@space.twc.de>

	* docs/Makefile.am:
	* docs/beast-index.doxi:
	* docs/coding-style.doxi: Added a description of the beast coding
	style to the developer documentation.

svn path=/trunk/; revision=3872

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -29,6 +29,7 @@ HTML_TARGETS = $(strip				\
 	html/bsescm.1.html			\
 	html/sfidl.1.html			\
 	html/bse.5.html				\
+	html/coding-style.html			\
 )
 CLEANFILES += ${HTML_TARGETS}
 STYLE_TARGETS = $(strip				\
@@ -222,6 +223,7 @@ doxi_files = $(strip		\
 	bsescm.1.doxi		\
 	plugin-devel.doxi	\
 	sfidl.1.doxi		\
+	coding-style.doxi	\
 )
 
 EXTRA_DIST += $(strip		\
