renamed bseresampler.tcc to bseresamplerimpl.hh to match beast naming
Sat Sep 16 15:19:33 2006 Tim Janik <timj@gtk.org>

        * bseresamplerimpl.hh: renamed bseresampler.tcc to bseresamplerimpl.hh
        to match beast naming conventions, and because it effectively implements
        parts of bseresampler.hh.

svn path=/trunk/; revision=3899

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -55,7 +55,7 @@ bse_public_h_sources = $(strip \
 	bsenote.h		bsemidifile.h		bseblockutils.hh		\
 	bsecxxvalue.hh		bsecxxutils.hh		bsecxxbase.hh			bsecxxclosure.hh \
 	bsecxxarg.hh		bsecxxmodule.hh		bsecxxplugin.hh			bseloader.h \
-	bseresampler.hh		bseresampler.tcc	\
+	bseresampler.hh		bseresamplerimpl.hh	\
 )
 # BSE C sources
 bse_c_sources = $(strip \
