Moved testresampler.cc from bse/tests to slowtests, to prepare it for
Wed Sep 27 11:30:27 2006 Stefan Westerfeld <stefan@space.twc.de>

	* slowtests/Makefile.am:
	* slowtests/testresampler.cc: Moved testresampler.cc from bse/tests to
	slowtests, to prepare it for automatic accuracy testing. Excessive
	automatic testing will be quite slow, thus it needs to be in this
	directory.

svn path=/trunk/; revision=3916

--- a/slowtests/Makefile.am
+++ b/slowtests/Makefile.am
@@ -43,7 +43,7 @@ generated: clean-generated $(GENERATED)
 
 # === test programs ===
 TESTS = perftest testwavechunk
-noinst_PROGRAMS = $(TESTS)
+noinst_PROGRAMS = $(TESTS) testresampler
 progs_ldadd = $(top_builddir)/bse/libbse.la
 # testwavechunk
 testwavechunk_SOURCES = testwavechunk.c cxxdummy.cc
@@ -51,3 +51,6 @@ testwavechunk_LDADD = $(progs_ldadd)
 # perftest
 perftest_SOURCES = perftest.cc bsecxxapi.cc
 perftest_LDADD = $(progs_ldadd)
+# testresampler
+testresampler_SOURCES = testresampler.cc
+testresampler_LDADD = $(progs_ldadd)
