skip checking and running intltool. generate po/Makefile.in.in from
Thu Sep 28 19:35:04 2006 Tim Janik <timj@gtk.org>

        * autogen.sh: skip checking and running intltool.
        generate po/Makefile.in.in from po/Makefile.intltool.

        * configure.in: read acintltool.m4, call IT_PROG_INTLTOOL.

        * po/intltool-scm-35.diff: fixes for stock intltool-0.35.0.

        * po/Makefile.intltool: added the Makefile.in.in from stock intltool-0.35.0.

        * acintltool.m4: added the intltool.m4 from stock intltool-0.35.0.

        * intltool-merge.in:
        * intltool-update.in:
        * intltool-extract.in: added from stock intltool-0.35.0.

        * po/intltool-scm.diff: unused, removed.

svn path=/trunk/; revision=3927

--- a/configure.in
+++ b/configure.in
@@ -157,6 +157,8 @@ AC_DEFUN([DUMMY_DEFS],
 dnl #
 dnl # Define package requirements.
 dnl #
+dnl ## include acintltool.m4 to provide IT_PROG_INTLTOOL
+builtin(include, acintltool.m4)dnl
 AC_DEFUN([AC_I18N_REQUIREMENTS],
 [
     ALL_LINGUAS=`cat "$srcdir/po/LINGUAS" | grep -v '^#' | xargs echo -n `
@@ -185,9 +187,9 @@ AC_DEFUN([AC_I18N_REQUIREMENTS],
     prefix="$saved_prefix"
     AC_SUBST(beastlocaledir)
 
-    dnl # do gettext checks and provide INTLLIBS
+    dnl # do gettext checks and prepare for intltool
     AM_GLIB_GNU_GETTEXT
-    AC_PROG_INTLTOOL
+    IT_PROG_INTLTOOL
 ])
 AC_DEFUN([AC_SFI_REQUIREMENTS],
 [
