added recursive slowcheck: rule, intended for checks that take too long
Thu Sep 28 19:52:02 2006 Tim Janik <timj@gtk.org>

        * Makefile.decl: added recursive slowcheck: rule, intended for checks
        that take too long for an ordinary make check. added check-before: and
        check-after: aliases for check-am and check-local. fixed all Makefiles
        to use check-before: and check-after: where appropriate.

        * intltool-extract.in: patched to support multiline scheme strings.

        * po/Makefile.intltool: added dummy slowcheck: rule.

        * po/intltool-scm-35.diff: updates.

svn path=/trunk/; revision=3928

--- a/Makefile.decl
+++ b/Makefile.decl
@@ -18,8 +18,8 @@ AM_CFLAGS = -D_BIRNET_SOURCE_EXTENSIONS
 AM_CXXFLAGS = -D_BIRNET_SOURCE_EXTENSIONS
 
 # === distfile-list ===
-# recursive rule supported by all Makefiles to generate a list of all
-# files listed as DISTFILES.
+# recursive rule supported by all Makefiles to generate a list of all files
+# listed as DISTFILES. this asserts a writable file named $DISTFILE_LIST.
 .PHONY: distfile-list
 distfile-list:
 	@if test ! -f "$(DISTFILE_LIST)" ; then				\
@@ -35,3 +35,18 @@ distfile-list:
 	  test -e "$$file" &&					\
 	    echo "$(subdir)/$$file" >> $(DISTFILE_LIST) ;	\
 	done ; true
+
+# === slowcheck ===
+# recursive rule supported by all Makefiles to run time consuming checks
+.PHONY: slowcheck slowcheck-recursive
+slowcheck: slowcheck-recursive
+slowcheck-recursive:
+	@for subdir in $(SUBDIRS) ; do				\
+	  test "$$subdir" = '.' ||				\
+	    $(MAKE) -C "$$subdir" $(AM_MAKEFLAGS) slowcheck ||	\
+	    exit 1 ;						\
+	done
+.PHONY: check-before check-after
+check-am: check-before
+check-local: check-after
+check-local:
