execute slowcheck: as part of distcheck:
Tue Oct 3 13:19:06 2006 Tim Janik <timj@gtk.org>

        * Makefile.am: execute slowcheck: as part of distcheck:

svn path=/trunk/; revision=3934

--- a/Makefile.am
+++ b/Makefile.am
@@ -72,6 +72,7 @@ distcheck: dist
 	  && $(MAKE) $(AM_MAKEFLAGS) dvi \
 	  && $(MAKE) $(AM_MAKEFLAGS) install \
 	  && $(MAKE) $(AM_MAKEFLAGS) check \
+	  && $(MAKE) $(AM_MAKEFLAGS) slowcheck \
 	  && $(MAKE) $(AM_MAKEFLAGS) installcheck \
 	  && $(MAKE) $(AM_MAKEFLAGS) uninstall \
 	  && $(MAKE) $(AM_MAKEFLAGS) distuninstallcheck_dir="$$dc_install_base" \
