moved BirnetRing here, renamed to Sfi.
Tue Oct 3 17:21:08 2006 Tim Janik <timj@gtk.org>

        * sfiring.h, sfiring.c: moved BirnetRing here, renamed to Sfi.

        * sfiprimitives.h, sfiprimitives.c: removed obsolete Ring code.

        * tests/ring.c: test SfiRing thoroughly.
        moved here from birnet/tests/ring.cc, renamed to use SfiRing.

        * tests/Makefile.am:
        * Makefile.am: build and integrate sfi/tests/.

svn path=/trunk/; revision=3935

--- a/configure.in
+++ b/configure.in
@@ -597,6 +597,7 @@ data/beast.applications
 birnet/Makefile
 birnet/tests/Makefile
 sfi/Makefile
+sfi/tests/Makefile
 bse/bseconfig.h
 bse/Makefile
 bse/icons/Makefile
