removed, moved to sfi/ as SfiRing.
Tue Oct 3 17:26:50 2006 Tim Janik <timj@gtk.org>

        * tests/ring.cc:
        * birnetring.[hc]: removed, moved to sfi/ as SfiRing.

        * birnetthread.c: ported from BirnetRing to GSList.

svn path=/trunk/; revision=3936

--- a/birnet/tests/Makefile.am
+++ b/birnet/tests/Makefile.am
@@ -7,11 +7,9 @@ include $(top_srcdir)/Makefile.decl
 INCLUDES       += -I$(top_srcdir) -I$(top_builddir) -I. $(BIRNET_CFLAGS)
 DEFS	       += -DG_LOG_DOMAIN='"$(basename $(@F))"' -DPARANOID -DG_DISABLE_CONST_RETURNS
 
-TESTS 		 = ring infotest signal sorting datalist threads
+TESTS 		 = infotest signal sorting datalist threads
 noinst_PROGRAMS  = $(TESTS)
 progs_ldadd 	 = $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) -lm
-ring_SOURCES	 = ring.cc
-ring_LDADD	 = $(progs_ldadd)
 infotest_SOURCES = infotest.cc
 infotest_LDADD	 = $(progs_ldadd)
 threads_SOURCES	 = threads.cc
