provide integer types. wrap cpu info and threading APIs. changed callers
Sat Oct 7 20:33:04 2006 Tim Janik <timj@gtk.org>

        * sfiwrapper.cc, sfiwrapper.h: provide integer types.
        wrap cpu info and threading APIs. changed callers to use
        the wrapped SFI variants.

        * sfitypes.h: removed obsoleted cruft.

        * tests/misctests.c: added compilation test for all threading
        macros.

svn path=/trunk/; revision=3949

--- a/configure.in
+++ b/configure.in
@@ -72,6 +72,7 @@ fi
 
 # architecture information
 AC_CANONICAL_TARGET
+dnl # AC_CANONICAL_HOST is provided by AC_CANONICAL_TARGET
 AC_DEFINE_UNQUOTED(BST_ARCH_NAME, "$target", [Architecture Description])
 
 # initialize automake, don't define PACKAGE and VERSION
