--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -60,7 +60,7 @@ beast-gtk/gxk/gxkparam-scale.c
 beast-gtk/gxk/gxkparam-spinner.c
 beast-gtk/gxk/gxkparam-toggle.c
 beast-gtk/gxk/gxksimplelabel.c
-birnet/birnetmsg.c
+birnet/birnetutils.cc
 bse/bseautodoc.c
 bse/bsebiquadfilter.c
 bse/bsebus.c
@@ -129,4 +129,5 @@ plugins/davsyndrum.c
 plugins/davxtalstrings.c
 plugins/evaluator/bseevaluator.idl
 plugins/freeverb/bsefreeverb.c
+sfi/sfimsg.c
 tools/bsewavetool.cc
